--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/aksm/groupsapp#readme",
   "dependencies": {
+    "express": "^4.14.0",
     "materialize-css": "^0.97.8",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.26.0",
     "twilio": "^2.11.0"
   }
 }
