--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mysql": "^2.12.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth2": "^0.1.6",
     "sequelize": "^3.27.0",
     "twilio": "^2.11.0"
   }
