--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth2": "^0.1.6",
+    "passport-local": "^1.0.0",
     "sequelize": "^3.27.0",
     "twilio": "^2.11.0"
   },
