--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "sequelize": "^3.27.0",
+    "session-memory-store": "^0.2.2",
     "twilio": "^2.11.0"
   },
   "devDependencies": {},
