--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
+    "fullcalendar": "^3.0.1",
     "handlebars": "^4.0.6",
     "materialize-css": "^0.97.8",
     "method-override": "^2.3.7",
