--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth2": "^0.1.6",
+    "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "sequelize": "^3.27.0",
     "session-memory-store": "^0.2.2",
     "twilio": "^2.11.0"
