google calendar plugin for fullcalendar found and added

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
     "fullcalendar": "^3.0.1",
+    "google-auth-library": "^0.9.10",
+    "googleapis": "^14.2.0",
     "handlebars": "^4.0.6",
     "materialize-css": "^0.97.8",
     "method-override": "^2.3.7",
